--- a/sshchesnyak_kts_android_09_2021/app/src/main/AndroidManifest.xml
+++ b/sshchesnyak_kts_android_09_2021/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="ru.iu3.sshchesnyak_kts_android_09_2021">
 
     <application
+        android:name=".RedditApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
